# home_network_DNS_management_system

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  BRANDING.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  go.mod  go.work.sum
.agents/shared/: caveman.md
.agents/shared/memories/: README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
backend/: .air.toml  .goreleaser.yaml  Dockerfile  go.mod  go.sum  go.work.sum
backend/cmd/dns-server/: embed_dev.go  main.go
backend/internal/api/: handlers.go  middleware.go  router.go
backend/internal/db/: sqlite.go
backend/internal/dns/: cache.go  dhcp.go  forwarder.go  handler.go  maps.go
backend/internal/models/: types.go
config/: dns-server.service
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/research/: ai-maintenance-manual.md  dns-mechanical-comparison.md  ui_ux_guidelines.md
docs/rfc/: 002-hybrid-remote-agent.md
firmware/: Cargo.toml
firmware/src/: display.rs  dns.rs  main.rs  storage.rs  wifi.rs
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: TourContext.tsx  tourSteps.ts
frontend/src/features/: api-types.ts
frontend/src/hooks/: api.ts  useAuth.tsx  useLayout.tsx  usePolling.ts  useTheme.tsx  useWindowFocus.ts
frontend/src/lib/: notifications.ts
frontend/src/pages/: BlocklistPage.tsx  DashboardPage.tsx  (+6 more)
server/: go.mod
web/src/: App.tsx
(+68 files in other folders)
