[package]
name = "esp32-dns-server"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
esp-idf-svc = "0.48"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-hal = "0.43"
embedded-svc = "0.27"
embedded-hal = "1.0"
log = "0.4"
ssd1306 = "0.8"
display-interface-i2c = "0.5"
heapless = "0.8"
